# demo-code-search

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  index-latest.yml  rust.yml
backend/: encoder.py  unixcoder.py
code_search/: config.py  get_file.py  postprocessing.py  searcher.py  service.py
code_search/index/: convert_lsif_index.py  file_uploader.py  files_to_json.py  helper.py  textifier.py  upload_code.py  upload_signatures.py
code_search/model/: encoder.py
demo_template/: config.py  service.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  quasar.config.js  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.template.html
frontend/src/api/: constants.ts  file.ts  search.ts
frontend/src/boot/: axios.js  highlight.js
frontend/src/components/: EssentialLink.vue  Logo.tsx
frontend/src/components/CodeContainer/: CodeContainer.module.css  index.tsx
frontend/src/components/CustomHeader/: CustomHeader.module.css  index.tsx
frontend/src/components/DemoSearch/: DemoSearch.module.css  index.tsx
frontend/src/components/FIleTree/: FileTree.module.css  index.tsx
frontend/src/hooks/: useGetFile.ts  useGetSearchResult.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AboutPage.vue  IndexPage.vue
frontend/src/pages/Home/: index.tsx  (+1 more)
frontend/src/router/: routes.js
frontend/src/theme/: ThemeProvider.tsx  index.tsx
tools/: download_and_index.sh  index_qdrant.sh
(+5 files in other folders)
