[tool.poetry]
name = "demo-template"
version = "0.1.0"
description = ""
authors = ["Qdrant Team <team@qdrant.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
torch = "^2.1.0"
transformers = "^4.26.1"
qdrant-client = "^1.9.0"
python-dotenv = "^0.21.1"
sentence-transformers = "^2.2.2"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
